# effectiva

./: .env.example  .gitignore  .mcp.json  AGENTS.md  FIXES_APPLIED.md  README.md  context_manager.py  effectiva.db  effectiva_memory.db  llms.txt  main.py  prompts-lock.json  prompts.json  pyproject.toml  verify_integrations.py  verify_mappers.py
.specify/memory/: constitution.md
agents/: base.py  coordinator.py  life_agent.py  prompts.py  reasoning.py  scheduling_agent.py  study_agent.py  work_agent.py
config/: settings.py
docs/: API_REFERENCE.md  USER_GUIDE.md
dspy_programs/: __init__.py  agent_optimizer.py  intent_classifier.py
examples/: demo_builtin_tools.py  demo_optimizer_integration.py  demo_production_readiness.py  demo_toon_savings.py
integrations/: discord.py  google_calendar.py  google_tasks.py  linkedin.py  whatsapp.py
memory/: memory_manager.py
prompts/: coordinator.prompt.yaml  life_agent.prompt.yaml  scheduling_agent.prompt.yaml  study_agent.prompt.yaml  work_agent.prompt.yaml
schemas/: toon_models.py
src/: store.ts
src/components/chat/ChatArea/: ChatArea.tsx
src/components/chat/Sidebar/: Endpoint.tsx  Sidebar.tsx
tests/scenarios/: coordinator_test.py  life_agent_test.py  scheduling_agent_test.py  study_agent_test.py  work_agent_test.py
tools/: bca_crisis_tools.py  bca_day_planner.py  calendar_tools.py  context_tools.py  quick_capture.py  study_techniques.py  task_tools.py  time_management.py
ui/: package.json
ui/src/: store.ts
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/app/agents/: page.tsx
(+8 files in other folders)
